Fix sticky element on iOS

--- a/resources/scss/components/_notes.scss
+++ b/resources/scss/components/_notes.scss
@@ -4,8 +4,6 @@
 	border-radius: 100px;
 	box-shadow: 4px 4px 8px rgba($black, .2);
 	height: $button-size;
-	position: sticky;
-	right: 8px;
 	top: 8px;
 	width: $button-size;
 	z-index: 998;
