--- a/resources/scss/components/_recipe.scss
+++ b/resources/scss/components/_recipe.scss
@@ -112,5 +112,6 @@ $edit-button-width: 60px;
 }
 
 #edit-button {
+	margin-right: 5px;
 	width: $edit-button-width;
 }
